refactor(wrappers): http wrapper created and swag docs refactored
