# internal/handlers/auth_handlers/signup.handler.go
@@ -22,14 +22,6 @@ type SignupRequest struct {
 	Password string `json:"password" validate:"required" example:"#Asdf123"`
 }
 
-//	@Description	Creates new user.
-//	@Tags			auth
-//	@Accept			json
-//	@Param			request	body	SignupRequest	true	"Request Body"
-//	@Produce		json
-//	@Success		201	{object}	utils.DefaultResponse	"Message: 'Sign up successfully'"
-//	@Failure		400	{object}	utils.CustomError		"Message: 'Username already in use. E-mail already in use.'"
-//	@router			/auth/sign-up   [post]
 func NewSignUpHttpHandler(db *pgxpool.Pool) *SignUpHttpHandler {
 	return &SignUpHttpHandler{
 		DB: db,
